Added api-gateway and discovery-server

--- a/analysis-service/src/main/resources/application.properties
+++ b/analysis-service/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8083
+spring.application.name = analysis-service
+
 open.ai.api.key = <INSERT-KEY-HERE>
 open.ai.host = https://api.openai.com/v1/chat/completions
+
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
