--- a/api-server/src/main/resources/application.properties
+++ b/api-server/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8081
+spring.application.name = api-server
+
 news.source.service.host = http://localhost:8082
 analysis.service.host = http://localhost:8083
+
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
