--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -11,6 +11,10 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = '17'
+}
+
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.3"
@@ -18,14 +22,6 @@ dependencyManagement {
 }
 
 dependencies {
-    implementation project(":common:model")
-    implementation project(":common:client")
-
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-
-    compileOnly 'org.projectlombok:lombok:1.18.28'
-    annotationProcessor 'org.projectlombok:lombok:1.18.28'
 }
