--- a/news-source-service/src/main/resources/application.properties
+++ b/news-source-service/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8082
+spring.application.name = news-source-service
+
 news.source.host.name = https://api.worldnewsapi.com
 news.source.api.key = <INSERT-KEY-HERE>
+
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
